[tool.poetry]
name = "OlivOS.nb2"
version = "0.1.6"
description = "Load OlivOS plugin in NoneBot2"
authors = ["jigsaw <j1g5aw@foxmail.com>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "OlivOS" }]

[tool.poetry.dependencies]
python = "^3.8"
olivos = "^0.10.2"
nonebot2 = "^2.0.0rc1"
nonebot-adapter-onebot = { version = "^2.0.0-beta.1", optional = true }
nonebot-adapter-telegram = { version = "^0.1.0-beta.0", optional = true }

[tool.poetry.extras]
onebot = ["nonebot-adapter-onebot"]
telegram = ["nonebot-adapter-telegram"]

[tool.poetry.group.dev.dependencies]
nb-cli = "^0.6.8"
pycln = "^2.1.2"
isort = "^5.10.1"
black = "^22.1.0"
nonemoji = "^0.1.3"
pre-commit = "^2.21.0"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
src_paths = ["OlivOS"]
extra_standard_library = ["typing_extensions"]

[tool.pycln]
path = "."
all = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
