[project]
name = "OlivOS.nb2"
version = "0.2.1"
description = "Load OlivOS plugin in NoneBot2"
authors = [{ name = "jigsaw", email = "j1g5aw@foxmail.com" }]
dependencies = ["olivos<1.0.0,>=0.10.2", "nonebot2<3.0.0,>=2.0.0"]
requires-python = ">=3.8,<4.0"
readme = "README.md"
license = { text = "AGPL-3.0-only" }

[project.optional-dependencies]
onebot = ["nonebot-adapter-onebot<3.0.0.0,>=2.2.2"]
telegram = ["nonebot-adapter-telegram<1.0.0.0,>=0.1.0b13"]

[tool.pdm.dev.dependencies]
nb-cli = "^0.6.8"
pycln = "^2.1.2"
isort = "^5.10.1"
black = "^22.1.0"
nonemoji = "^0.1.3"
pre-commit = "^2.21.0"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
src_paths = ["OlivOS"]
extra_standard_library = ["typing_extensions"]

[tool.pycln]
path = "."
all = false

[tool.pyright]
exclude = ["__pypackages__"]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.build]
includes = ["OlivOS"]
