[project]
name = "OlivOS.nb2"
version = "0.2.3"
description = "Load OlivOS plugin in NoneBot2"
authors = [{ name = "jigsaw", email = "j1g5awi@proton.me" }]
dependencies = ["olivos<1.0.0,>=0.10.2", "nonebot2<3.0.0,>=2.0.0"]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = { text = "AGPL-3.0-only" }

[project.optional-dependencies]
onebot = ["nonebot-adapter-onebot<3.0.0.0,>=2.2.2"]
telegram = ["nonebot-adapter-telegram<1.0.0.0,>=0.1.0b13"]

[tool.pdm.dev-dependencies]
pre-commit = ["ruff", "isort", "black", "nonemoji", "pre-commit"]
nonebot = ["aiohttp>=3.10.2", "fastapi>=0.112.0"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "UP",    # pyupgrade
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E402",   # module-import-not-at-top-of-file
    "UP037",  # quoted-annotation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
    "PYI051",
]


[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pycln]
path = "."
all = false

[tool.pyright]
typeCheckingMode = "basic"
reportShadowedImports = false
pythonVersion = "3.9"
pythonPlatform = "All"

[tool.pdm.build]
includes = ["OlivOS"]
